<resources>

    <string name="app_name">XYZ Reader</string>
    <string name="action_share">Share</string>



    <string name="error_msg_no_internet">Check your internet connection</string>
    <string name="error_msg_parsing_feed">Error updating content.</string>



    <string name="detail_photo_content_description">Image of the article</string>
    <string name="detail_date_author_content_description">Date and author of the article</string>
    <string name="detail_author_content_description">Author of the article</string>
    <string name="detail_content_content_description">The article</string>
    <string name="detail_title_content_description">Title of the article</string>

</resources>
