<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/list_card_margin_vertical"
    android:layout_marginLeft="@dimen/list_card_margin_horizontal"
    android:layout_marginRight="@dimen/list_card_margin_horizontal"
    android:layout_marginTop="@dimen/list_card_margin_vertical"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.example.xyzreader.ui.DynamicHeightNetworkImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_card_thumbnail_default_height"
            android:background="@color/photo_placeholder"
            android:contentDescription="@string/detail_photo_content_description"/>

        <TextView
            android:id="@+id/article_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_title_content_description"
            android:ellipsize="end"
            android:maxLines="@integer/list_card_text_title_lines_max"
            android:paddingLeft="@dimen/list_card_text_padding_horizontal"
            android:paddingRight="@dimen/list_card_text_padding_horizontal"
            android:paddingTop="@dimen/list_card_text_padding_vertical_big"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/article_subtitle"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_author_content_description"
            android:ellipsize="end"
            android:maxLines="@integer/list_card_text_author_lines_max"
            android:paddingBottom="@dimen/list_card_text_padding_vertical_big"
            android:paddingTop="@dimen/list_card_text_padding_vertical"
            android:paddingLeft="@dimen/list_card_text_padding_horizontal"
            android:paddingRight="@dimen/list_card_text_padding_horizontal"
            android:singleLine="true"
            android:textColor="@color/secondary_text" />
    </LinearLayout>

</android.support.v7.widget.CardView>
