<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/col"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_layout_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="@dimen/appbar_elevation">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginBottom="@dimen/detail_toolbar_expanded_title_margin_bottom"
                app:expandedTitleMarginEnd="@dimen/detail_toolbar_expanded_title_margin_end"
                app:expandedTitleMarginStart="@dimen/detail_toolbar_expanded_title_margin_start"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/detail_photo_content_description"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />


                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"

                    ></android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <!-- Your scrollable content here   -->


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/article_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    style="@style/width_match_parent_max"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/detail_card_margin_top"
                    android:layout_marginBottom="@dimen/detail_card_margin_bottom"
                    app:cardElevation="@dimen/detail_card_elevation"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_inner_vertical_margin"
                        android:layout_marginTop="@dimen/detail_inner_vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/article_byline"
                            style="?android:attr/textAppearanceSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/detail_inner_vertical_margin"
                            android:layout_marginLeft="@dimen/detail_inner_horizontal_margin"
                            android:layout_marginRight="@dimen/detail_inner_horizontal_margin"
                            android:layout_marginTop="@dimen/detail_inner_vertical_margin"
                            android:contentDescription="@string/detail_date_author_content_description"
                            android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />

                        <TextView
                            android:id="@+id/article_body"
                            style="@style/ArticleTextAppearance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/detail_inner_vertical_margin"
                            android:layout_marginLeft="@dimen/detail_inner_horizontal_margin"
                            android:layout_marginRight="@dimen/detail_inner_horizontal_margin"
                            android:contentDescription="@string/detail_content_content_description"
                            />
                    </LinearLayout>


                </android.support.v7.widget.CardView>
            </FrameLayout>

        </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:src="@drawable/ic_share"
            app:elevation="@dimen/fab_elevation"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>